Bug 1818126: Use WhereToScroll::Center when tab scrolling. r=hiro,credential-management-reviewers,sgalich

When scrolling the next element into view for a tab scroll, scroll the
element to the center.

Differential Revision: https://phabricator.services.mozilla.com/D182930