dom/base/nsFocusManager.cpp
@@ -2905,10 +2905,17 @@ void nsFocusManager::ScrollIntoView(PresShell* aPresShell, nsIContent* aContent,
   if (aFlags & FLAG_NOSCROLL) {
     return;
   }
+
+  // If the scroll is triggered by a tab scroll, center the target element.
+  WhereToScroll whereToScroll(WhereToScroll::Nearest);
+  if (aFlags & FLAG_BYKEY) {
+    whereToScroll = WhereToScroll::Center;
+  }
+
   // If the noscroll flag isn't set, scroll the newly focused element into view.
   aPresShell->ScrollContentIntoView(
-      aContent, ScrollAxis(WhereToScroll::Nearest, WhenToScroll::IfNotVisible),
-      ScrollAxis(WhereToScroll::Nearest, WhenToScroll::IfNotVisible),
+      aContent, ScrollAxis(whereToScroll, WhenToScroll::IfNotVisible),
+      ScrollAxis(whereToScroll, WhenToScroll::IfNotVisible),
       ScrollFlags::ScrollOverflowHidden);
   // Scroll the input / textarea selection into view, unless focused with the
   // mouse, see bug 572649.
